<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#47479A"
    tools:context=".Information">

    <TextView
        android:layout_width="353dp"
        android:layout_height="105dp"
        android:gravity="center"
        android:text="About Application"
        android:textSize="40dp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="341dp"
        android:layout_height="599dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewi1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textual1"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TextView
                android:id="@+id/textViewi2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textual2"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TextView
                android:id="@+id/textViewi3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textual3"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TextView
                android:id="@+id/textViewi4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textual4"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TextView
                android:id="@+id/textViewi5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textual5"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TextView
                android:id="@+id/textViewi6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textual6"
                android:textColor="@color/black"
                android:textSize="20dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>